First real game recorded: 66 snapshots, and two bugs the test could not find
A human-vs-AI game on the modified server produced 66 snapshots across
15 turns with no errors, and a mid-game board renders correctly. Both
fixes were invisible to the AI-vs-AI test game.

getCards(null) passed null as the GAME, not a filter — the one-arg form
is getCards(Game). Every snapshot threw NPE on the first card a player
held. The test game wrote 24 clean snapshots against this same code
because testMode deals no opening hand, so both hands were empty and the
null was never dereferenced. The defect that made that game useless is
what hid this one.

A token is not a card. Three of sixteen names did not resolve:
Treasure Token, Hero Token, and Everywhere — the land token Overlord of
the Hauntwoods creates. validate_position rejects unresolvable names, so
every board a modern game makes would have been refused. Everywhere is
why the flag comes from Permanent.isToken() and not from the string.
An unflagged permanent is still checked: absent means "a card".

The client's gamelogsJson is not a substitute — it is a UI message trace
with no phase, step, turn or hand in it. saveGameHistory is enabled
alongside ours for an independent narrative record.